# linalg-zero-demo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  sitecustomize.py  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
env/: .env.distillation.example  .env.grpo.example  .env.grpo.runpod.example
linalg_zero/: distillation.py  generate.py  grpo_train.py  sft_train.py
linalg_zero/config/: cleaning_config.yaml  data.py
linalg_zero/config/distillation/: env.example.sh  vllm_qwen3_32b.yaml  vllm_qwen3_32b_debug.yaml  vllm_qwen3_4b_think.yaml
linalg_zero/demo/: app.py  r.txt  style.css  test.tml
linalg_zero/distillation/: launch_server.py  utils.py
linalg_zero/distillation/components/: diagnostics.py  models.py  multi_turn_generation.py  multi_turn_generation_base.py
linalg_zero/distillation/scripts/: analyse_dataset.txt  validate_dataset.py
linalg_zero/generator/: context.py  entropy_control.py  registry.py  utils.py
linalg_zero/generator/analysis/: template_inspection.py  utils.py
linalg_zero/generator/composition/: components.py  composition.py
linalg_zero/generator/sympy/: base.py  template_engine.py  templates.py
linalg_zero/grpo/: __init__.py  general_rm.py  rl_utils.py  run.py  run_rl.py  task_selection.py  types.py  verify.py
linalg_zero/grpo/agents/: base.py  tool_calling_agent.py
linalg_zero/sft/: callbacks.py  diagnostics.py  hub.py  tool_calling_accuracy.py  tool_evaluation.py  utils.py
linalg_zero/shared/: lib.py  system_prompts.py  utils.py
tests/generation/: test_template_inspection.py
(+48 files in other folders)
