[project]
name = "linalg-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wheel",
    "streamlit",
    "ddgs",
    "gradio>=5.0.0",
    "torch>=2.8.0",
    "transformers>=4.53.3",
    "spaces",
    "sentencepiece",
    "accelerate",
    "autoawq",
    "timm",
    "compressed-tensors"
]
